--- a/package.json
+++ b/package.json
@@ -9,5 +9,10 @@
     "ethereum-waffle": "^3.0.0",
     "ethers": "^5.6.9",
     "hardhat": "^2.9.9"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^4.7.0",
+    "hardhat-gas-reporter": "^1.0.8",
+    "solidity-coverage": "^0.7.21"
   }
 }
